--- a/resources/main.css
+++ b/resources/main.css
@@ -361,9 +361,12 @@ section.what-i-do .features-group .feature {
   min-height: 80vh;
   background-image: linear-gradient(60deg, #96deda 0%, #50c9c3 100%);
   background: rgba(236, 241, 239, 1);
-  background: #d1e1e0;
   background:#28965A;
   background: #DDA448;
+  background: #bbe6e4;
+  background: #a8cfcd;
+  background-image: linear-gradient(180deg, #deeaf7 0%, #ccdfe4 100%);
+
  
   background-size: cover;
   display: flex;
